--- a/fronend/project/package.json
+++ b/fronend/project/package.json
@@ -21,7 +21,18 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@cloudinary/angular-5.x": "^1.5.3",
+    "@cloudinary/ng": "^1.8.0",
+    "@cloudinary/url-gen": "^1.8.7",
+    "@ngx-gallery/lightbox": "^5.0.0-beta.0",
+    "cloudinary-angular": "^1.0.1",
+    "cloudinary-core": "^2.13.0",
+    "igniteui-angular": "^15.0.5",
     "jwt-decode": "^3.1.2",
+    "ng-file-upload": "^12.2.13",
+    "ng-gallery": "^8.0.1",
+    "ngx-dropzone": "^3.1.0",
+    "ngx-gallery": "^5.10.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
