--- a/fronend/project/package.json
+++ b/fronend/project/package.json
@@ -17,7 +17,8 @@
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
     "@angular/forms": "^15.0.0",
-    "@angular/material": "^15.0.3",
+    "@angular/google-maps": "^15.0.4",
+    "@angular/material": "^15.1.0",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
@@ -27,12 +28,16 @@
     "@ngx-gallery/lightbox": "^5.0.0-beta.0",
     "cloudinary-angular": "^1.0.1",
     "cloudinary-core": "^2.13.0",
+    "flowbite": "^1.6.2",
     "igniteui-angular": "^15.0.5",
     "jwt-decode": "^3.1.2",
     "ng-file-upload": "^12.2.13",
     "ng-gallery": "^8.0.1",
+    "ng-zorro-antd": "^15.0.1",
     "ngx-dropzone": "^3.1.0",
     "ngx-gallery": "^5.10.0",
+    "primeicons": "^6.0.1",
+    "primeng": "^15.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
